tic-tac-toe lab

--- a/unit-1/lab-tic-tac-toe/index.html
+++ b/unit-1/lab-tic-tac-toe/index.html
@@ -38,7 +38,7 @@
         </table>
         <span class="hud">
             <div class="scoreLine"><b>X </b><span id="xScore">0</span>  - <span id="oScore">0</span><b> O</b></div>
-            <div id="playerTurn">Player Turn: </div>
+            <div>Player Turn: <span id="playerTurn"></span></div>
             <button>New Game</button> 
         </span>
     </body>
